[project]
name = "noman"
dynamic = ["version"]
dependencies = [
    "mistune>=3.1.3",
    "pygments>=2.19.1",
]

[project.scripts]
noman = "noman:viewer.main"

[tool.hatch.build.targets.wheel]
package = ["src/*"]

[tool.hatch.version]
path = "src/noman/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

