[project]
name = "noman-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Atsuo Ishimoto", email = "atsuoishimoto@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]
